--- a/app/src/main/res/layout/home_one.xml
+++ b/app/src/main/res/layout/home_one.xml
@@ -55,8 +55,8 @@
                     android:id="@+id/sou"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/dp_3"
-                    android:layout_marginBottom="@dimen/dp_3"
+                    android:layout_marginTop="@dimen/dp_5"
+                    android:layout_marginBottom="@dimen/dp_5"
                     android:layout_marginLeft="@dimen/dp_10"
                     android:layout_gravity="center_vertical"
                     android:layout_marginRight="@dimen/dp_10"
@@ -105,6 +105,7 @@
         android:layout_height="wrap_content">
 
         <LinearLayout
+            android:id="@+id/ll1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -164,6 +165,7 @@
             android:layout_height="wrap_content">
 
             <LinearLayout
+                android:id="@+id/ll2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
@@ -228,6 +230,7 @@
                 android:orientation="horizontal">
 
                 <LinearLayout
+                    android:id="@+id/ll3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
