--- a/app/src/main/res/layout/home_two.xml
+++ b/app/src/main/res/layout/home_two.xml
@@ -1,11 +1,121 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    
-    <TextView
+    android:layout_height="match_parent"
+    android:background="#fff"
+    android:orientation="vertical">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp_30"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="@dimen/dp_24"
+            android:layout_height="@dimen/dp_24"
+            android:layout_marginLeft="@dimen/dp_20"
+            android:src="@drawable/detail_icon_location_default"/>
+
+
+        <TextView
+            android:layout_marginLeft="@dimen/dp_10"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#333333"
+            android:textSize="@dimen/sp_14"
+            android:text="北京"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/search_shape"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/sou"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_5"
+                android:layout_marginBottom="@dimen/dp_5"
+                android:layout_marginLeft="@dimen/dp_10"
+                android:layout_gravity="center_vertical"
+                android:layout_marginRight="@dimen/dp_10"
+                android:src="@drawable/com_icon_search_default"/>
+            <EditText
+                android:id="@+id/et_sou"
+                android:layout_width="@dimen/dp_150"
+                android:background="@null"
+                android:textSize="@dimen/sp_10"
+                android:hint="输入要搜索的影片"
+                android:layout_gravity="center_vertical"
+                android:layout_height="wrap_content"
+                android:visibility="gone"/>
+            <TextView
+                android:id="@+id/tv_sou"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#ffff"
+                android:visibility="gone"
+                android:layout_gravity="center_vertical"
+                android:textSize="@dimen/sp_10"
+                android:paddingRight="@dimen/dp_10"
+                android:text="搜索"/>
+
+        </LinearLayout>
+
+
+    </LinearLayout>
+
+    <RadioGroup
+        android:id="@+id/rg_yy"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="2"/>
+        android:layout_gravity="center"
+        android:layout_marginTop="@dimen/dp_10"
+        android:orientation="horizontal">
+
+        <RadioButton
+            android:id="@+id/yy_one"
+            android:layout_width="@dimen/dp_83"
+            android:layout_height="wrap_content"
+            android:background="@drawable/yyt_sel"
+            android:textSize="@dimen/sp_14"
+            android:padding="@dimen/dp_5"
+            android:gravity="center"
+            android:textColor="#333333"
+            android:button="@null"
+            android:text="推荐影院"/>
+
+        <TextView
+            android:layout_width="@dimen/dp_32"
+            android:layout_height="wrap_content" />
+
+        <RadioButton
+            android:id="@+id/yy_two"
+            android:layout_width="@dimen/dp_83"
+            android:layout_height="wrap_content"
+            android:background="@drawable/yyt_sel"
+            android:textSize="@dimen/sp_14"
+            android:padding="@dimen/dp_5"
+            android:gravity="center"
+            android:textColor="#333333"
+            android:button="@null"
+            android:text="附近影院"/>
+
+    </RadioGroup>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/list2"
+        android:layout_marginTop="@dimen/dp_10"
+        android:layout_marginRight="@dimen/dp_24"
+        android:layout_marginLeft="@dimen/dp_24"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
 
 </LinearLayout>
