--- a/app/src/main/res/layout/home_one.xml
+++ b/app/src/main/res/layout/home_one.xml
@@ -19,11 +19,10 @@
         android:layout_height="wrap_content"
         android:background="@drawable/dianyingbeijing1">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dp_30"
-            android:orientation="horizontal">
+            android:layout_marginTop="@dimen/dp_30">
 
             <ImageView
                 android:layout_width="@dimen/dp_24"
@@ -33,21 +32,19 @@
 
 
             <TextView
-                android:layout_marginLeft="@dimen/dp_10"
+                android:id="@+id/addre"
+                android:layout_marginLeft="@dimen/dp_60"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#fff"
                 android:textSize="@dimen/sp_14"
                 android:text="北京"/>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"/>
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
                 android:background="@drawable/search_shape"
                 android:orientation="horizontal">
 
@@ -84,7 +81,7 @@
             </LinearLayout>
 
 
-        </LinearLayout>
+        </RelativeLayout>
 
 
         <recycler.coverflow.RecyclerCoverFlow
