--- a/app/src/main/res/layout/home_two.xml
+++ b/app/src/main/res/layout/home_two.xml
@@ -5,11 +5,10 @@
     android:background="#fff"
     android:orientation="vertical">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_30"
-        android:orientation="horizontal">
+        android:layout_marginTop="@dimen/dp_30">
 
         <ImageView
             android:layout_width="@dimen/dp_24"
@@ -18,20 +17,19 @@
             android:src="@drawable/detail_icon_location_default"/>
 
 
+
         <TextView
-            android:layout_marginLeft="@dimen/dp_10"
+            android:id="@+id/addre"
+            android:layout_marginLeft="@dimen/dp_60"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#333333"
             android:textSize="@dimen/sp_14"
             android:text="北京"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"/>
 
         <LinearLayout
+            android:layout_alignParentRight="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/search_shape"
@@ -70,7 +68,7 @@
         </LinearLayout>
 
 
-    </LinearLayout>
+    </RelativeLayout>
 
     <RadioGroup
         android:id="@+id/rg_yy"
