--- a/app/src/main/res/layout/my_frag_all.xml
+++ b/app/src/main/res/layout/my_frag_all.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#fff"
     android:layout_height="match_parent">
 
@@ -10,8 +11,9 @@
         android:layout_height="@dimen/dp_200"
         android:background="@drawable/my_back">
 
-        <ImageView
+        <com.facebook.drawee.view.SimpleDraweeView
             android:id="@+id/my_head"
+            app:roundAsCircle="true"
             android:layout_width="@dimen/dp_72"
             android:layout_height="@dimen/dp_72"
             android:layout_centerHorizontal="true"
