--- a/app/src/main/res/layout/popu_movie.xml
+++ b/app/src/main/res/layout/popu_movie.xml
@@ -1,18 +1,152 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
-    <RelativeLayout
+    android:background="#00000000"
+    android:layout_height="match_parent">
+    <LinearLayout
         android:layout_marginTop="@dimen/dp_110"
         android:background="@drawable/popu_shape"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-<ImageView
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    android:layout_marginLeft="@dimen/dp_24"
-    android:layout_width="@dimen/dp_111"
-    android:layout_height="@dimen/dp_149"
-    android:src="@drawable/details_movie"/>
-    </RelativeLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginRight="@dimen/dp_24"
+            android:layout_marginLeft="@dimen/dp_155"
+            android:layout_marginTop="@dimen/dp_20">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/leixing"
+                        android:textSize="@dimen/sp_10"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="1111"/>
+
+                    <TextView
+                        android:id="@+id/daoyan"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="11111"
+                        android:textSize="@dimen/sp_10"
+                        android:layout_marginTop="@dimen/dp_10"/>
+                </LinearLayout>
+
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1"/>
+                <ImageView
+                    android:id="@+id/down"
+                    android:layout_width="@dimen/dp_50"
+                    android:layout_height="@dimen/dp_50"
+                    android:src="@drawable/down"/>
+
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/shichang"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/sp_10"
+                android:text="11111111"/>
+
+            <TextView
+                android:id="@+id/chandi"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/sp_10"
+                android:text="1111"
+                android:textSize="@dimen/sp_10"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_marginLeft="@dimen/dp_24"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginRight="@dimen/dp_24"
+            android:layout_marginTop="@dimen/dp_40">
+
+            <TextView
+                android:textSize="@dimen/sp_16"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="剧情简介"/>
+            <View
+                android:layout_width="@dimen/dp_35"
+                android:layout_marginTop="@dimen/dp_5"
+                android:background="@drawable/shape_shou_lien"
+                android:layout_height="@dimen/dp_2"/>
+
+            <TextView
+                android:id="@+id/juqing"
+                android:layout_width="match_parent"
+                android:layout_marginTop="@dimen/sp_10"
+                android:layout_height="wrap_content" />
+
+
+            <TextView
+                android:textSize="@dimen/sp_16"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/sp_10"
+                android:text="演员人员"/>
+            <View
+                android:layout_width="@dimen/dp_35"
+                android:layout_marginTop="@dimen/dp_5"
+                android:background="@drawable/shape_shou_lien"
+                android:layout_height="@dimen/dp_2"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_marginTop="@dimen/sp_10"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/sp_10"
+                    android:textColor="#fff"
+                    android:background="@drawable/my_sign_shape1"
+                    android:text="演员名字"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/sp_10"
+                    android:textColor="#fff"
+                    android:background="@drawable/my_sign_shape1"
+                    android:text="演员名字"/>
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <com.facebook.drawee.view.SimpleDraweeView
+        android:id="@+id/iv2"
+        android:layout_marginLeft="@dimen/dp_24"
+        android:layout_width="@dimen/dp_111"
+        android:layout_height="@dimen/dp_149"
+        android:src="@drawable/details_movie"
+        android:layout_marginTop="@dimen/dp_90"/>
 </RelativeLayout>
