--- a/app/src/main/res/layout/popu_photo.xml
+++ b/app/src/main/res/layout/popu_photo.xml
@@ -2,8 +2,17 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="@dimen/dp_110"
-    android:background="@drawable/popu_shape">
+    android:background="#00000000">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_marginTop="@dimen/dp_110"
+        android:background="@drawable/popu_shape"
+        android:layout_height="match_parent">
+
+
+
+
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -20,17 +29,30 @@
             android:textColor="#333333"
             android:textSize="@dimen/sp_16" />
         <View
-            android:layout_marginTop="@dimen/dp_6"
+            android:layout_marginTop="@dimen/dp_5"
             android:background="@drawable/details_btn"
             android:layout_below="@id/photo"
             android:layout_width="@dimen/dp_35"
-            android:layout_height="3dp"/>
+            android:layout_height="@dimen/dp_2"/>
 
-        <ImageButton
-            android:layout_width="@dimen/dp_24"
-            android:layout_height="@dimen/dp_24"
+        <ImageView
+            android:id="@+id/back"
+            android:layout_width="@dimen/dp_50"
+            android:layout_height="@dimen/dp_50"
             android:layout_alignParentRight="true"
             android:background="@android:color/transparent"
             android:src="@drawable/down" />
+
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/list3"
+            android:layout_width="match_parent"
+            android:layout_marginTop="@dimen/dp_60"
+            android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+
+
     </RelativeLayout>
+
+    </LinearLayout>
+
 </RelativeLayout>
