--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -11,7 +11,7 @@
         android:id="@+id/my_zl"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/dp_20"
+        android:layout_marginLeft="@dimen/dp_24"
         android:layout_marginTop="@dimen/dp_20"
         android:text="用户信息"
         android:textColor="#666666"
@@ -43,8 +43,10 @@
                 android:textColor="#666666"
                 android:textSize="@dimen/sp_14" />
 
-            <ImageView
+            <com.facebook.drawee.view.SimpleDraweeView
                 android:id="@+id/my_head"
+                app:roundAsCircle="true"
+                android:layout_marginRight="@dimen/dp_5"
                 android:layout_width="@dimen/dp_30"
                 android:layout_height="@dimen/dp_30"
                 android:layout_alignParentRight="true" />
@@ -77,6 +79,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:text="你的益边"
+                android:layout_marginRight="@dimen/dp_5"
                 android:textColor="#666666"
                 android:textSize="@dimen/sp_12" />
         </RelativeLayout>
@@ -104,12 +107,12 @@
 
             <TextView
                 android:id="@+id/my_sex"
-
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:text="男"
                 android:textColor="#666666"
+                android:layout_marginRight="@dimen/dp_5"
                 android:textSize="@dimen/sp_12" />
         </RelativeLayout>
         <View
@@ -121,10 +124,10 @@
         <RelativeLayout
             android:id="@+id/r4"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/sp_10"
             android:layout_below="@id/r3"
-            android:paddingTop="@dimen/dp_10"
-            android:paddingBottom="@dimen/dp_5">
+            >
 
             <TextView
                 android:layout_width="wrap_content"
@@ -140,6 +143,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:text="1980-02-25"
+                android:layout_marginRight="@dimen/dp_5"
                 android:textColor="#666666"
                 android:textSize="@dimen/sp_12" />
         </RelativeLayout>
@@ -178,6 +182,8 @@
                 android:text="13021281212"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/dp_30"
+                android:textSize="@dimen/sp_14"
+                android:layout_marginRight="@dimen/dp_5"
                 android:layout_alignParentRight="true" />
         </RelativeLayout>
         <View
@@ -203,9 +209,11 @@
                 android:textSize="@dimen/sp_14" />
 
             <TextView
+                android:id="@+id/emaile"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
+                android:layout_marginRight="@dimen/dp_5"
                 android:text="123@123.com"
                 android:textColor="#666666"
                 android:textSize="@dimen/sp_12" />
