--- a/app/src/main/res/layout/cinema_flow_item2.xml
+++ b/app/src/main/res/layout/cinema_flow_item2.xml
@@ -13,7 +13,8 @@
             android:id="@+id/simp_cinema_flow"
             android:layout_width="@dimen/dp_158"
             android:layout_height="@dimen/dp_223"
-            app:roundedCornerRadius="@dimen/dp_8" />
+           android:background="#00ffffff"
+           />
 
         <LinearLayout
             android:layout_width="match_parent"
