--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -247,14 +247,13 @@
                 android:textColor="#666666"
                 android:textSize="@dimen/sp_14" />
 
-            <ImageButton
-                android:background="@android:color/transparent"
-                android:src="@drawable/my_reset"
+            <ImageView
                 android:id="@+id/my_reset"
-                android:text="13021281212"
                 android:layout_width="@dimen/dp_24"
                 android:layout_height="@dimen/dp_24"
-                android:layout_alignParentRight="true" />
+                android:layout_alignParentRight="true"
+                android:src="@drawable/my_reset"
+                android:text="13021281212" />
         </RelativeLayout>
 
     </RelativeLayout>
