--- a/app/src/main/res/layout/threelist_item.xml
+++ b/app/src/main/res/layout/threelist_item.xml
@@ -38,6 +38,7 @@
             android:layout_weight="1"/>
 
         <CheckBox
+            android:id="@+id/love"
             android:layout_width="@dimen/dp_15"
             android:layout_height="@dimen/dp_15"
             android:background="@drawable/love_sel"
