--- a/app/src/main/res/layout/activity_my_love.xml
+++ b/app/src/main/res/layout/activity_my_love.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.why.happy_movie.activity.MyLoveActivity">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        >
     <RadioGroup
         android:id="@+id/rg_yy"
         android:layout_width="wrap_content"
@@ -51,11 +56,14 @@
         android:layout_weight="1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
+
+    </LinearLayout>
     <ImageView
+        android:layout_alignParentBottom="true"
         android:id="@+id/love_return"
         android:layout_margin="@dimen/dp_24"
         android:layout_width="@dimen/dp_60"
         android:layout_height="@dimen/dp_60"
         android:src="@drawable/ic_xiangqing_back"
         />
-</LinearLayout>
+</RelativeLayout>
