--- a/app/src/main/res/layout/idea_activity.xml
+++ b/app/src/main/res/layout/idea_activity.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:paddingLeft="@dimen/dp_24"
+    android:background="#fff"
     android:paddingRight="@dimen/dp_24">
 
     <TextView
