--- a/app/src/main/res/layout/activity_my_rccord.xml
+++ b/app/src/main/res/layout/activity_my_rccord.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="#fff"
     tools:context="com.why.happy_movie.activity.MyRccordActivity">
     <RadioGroup
         android:id="@+id/rg_yy"
