--- a/app/src/main/res/layout/my_frag_all.xml
+++ b/app/src/main/res/layout/my_frag_all.xml
@@ -199,7 +199,7 @@
 
             <ImageButton
                 android:id="@+id/my_version"
-                android:layout_width="wrap_content"
+                android:layout_width="@dimen/dp_24"
                 android:layout_height="@dimen/dp_24"
                 android:layout_gravity="center"
                 android:layout_marginTop="@dimen/dp_15"
