--- a/app/src/main/res/layout/popu_pian.xml
+++ b/app/src/main/res/layout/popu_pian.xml
@@ -7,6 +7,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_marginTop="@dimen/dp_110"
+        android:orientation="vertical"
         android:background="@drawable/popu_shape"
         android:layout_height="match_parent">
 
@@ -45,8 +46,14 @@
 
 
 
+       <android.support.v7.widget.RecyclerView
+           android:id="@+id/list4"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:layout_marginTop="@dimen/dp_60"></android.support.v7.widget.RecyclerView>
 
     </RelativeLayout>
+
 
     </LinearLayout>
 
