--- a/app/src/main/res/layout/my_reset_pwd.xml
+++ b/app/src/main/res/layout/my_reset_pwd.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent">
 
     <LinearLayout
+        android:id="@+id/lall"
         android:orientation="vertical"
         android:layout_width="@dimen/dp_312"
         android:layout_height="wrap_content"
@@ -20,7 +21,6 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:layout_weight="1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
@@ -28,13 +28,16 @@
                 android:textColor="#333333"
                 android:textSize="@dimen/sp_14" />
 
-            <TextView
-                android:id="@+id/my_phone"
+            <EditText
+                android:layout_weight="1"
+                android:gravity="right"
+                android:background="@android:color/transparent"
+                android:id="@+id/my_pass"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/dp_30"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="@dimen/dp_5"
-                android:text="130****1212"
+                android:hint="若包含字母，请注意区分大小写"
                 android:textColor="#999999"
                 android:textSize="@dimen/sp_14" />
         </LinearLayout>
@@ -53,7 +56,6 @@
             android:paddingBottom="@dimen/dp_10">
 
             <TextView
-                android:layout_weight="1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
@@ -62,13 +64,16 @@
                 android:textSize="@dimen/sp_14" />
 
             <EditText
+                android:layout_weight="1"
+                android:gravity="right"
                 android:background="@android:color/transparent"
                 android:id="@+id/re_pwd"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="@dimen/dp_5"
-                android:text="18801039357"
+                android:hint="若包含字母，请注意区分大小写"
+
                 android:textColor="#999999"
                 android:textSize="@dimen/sp_12" />
         </LinearLayout>
@@ -85,7 +90,6 @@
             android:paddingBottom="@dimen/dp_10">
 
             <TextView
-                android:layout_weight="1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
@@ -94,19 +98,33 @@
                 android:textSize="@dimen/sp_14" />
 
             <EditText
+                android:layout_weight="1"
+                android:gravity="right"
                 android:background="@android:color/transparent"
                 android:id="@+id/new_pwd"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="@dimen/dp_5"
-                android:text="18801039357"
+                android:hint="确认密码"
+
                 android:textColor="#999999"
                 android:textSize="@dimen/sp_12" />
         </LinearLayout>
 
 
     </LinearLayout>
+    <Button
+        android:id="@+id/affirm"
+        android:background="@drawable/shape_yyt"
+        android:text="确认修改"
+        android:textColor="#fff"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/lall"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="@dimen/dp_20"
+        />
 <ImageView
     android:layout_alignParentBottom="true"
     android:layout_width="@dimen/dp_60"
