--- a/app/src/main/res/layout/popu_advance.xml
+++ b/app/src/main/res/layout/popu_advance.xml
@@ -8,6 +8,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
         android:paddingLeft="@dimen/dp_24"
         android:paddingTop="@dimen/dp_20"
         android:paddingRight="@dimen/dp_24">
@@ -19,12 +20,14 @@
             android:text="影评"
             android:textColor="#333333"
             android:textSize="@dimen/sp_16" />
+
         <View
-            android:layout_marginTop="@dimen/dp_6"
-            android:background="@drawable/details_btn"
-            android:layout_below="@id/adavance"
             android:layout_width="@dimen/dp_35"
-            android:layout_height="3dp"/>
+            android:layout_height="3dp"
+            android:layout_below="@id/adavance"
+            android:layout_marginTop="@dimen/dp_6"
+            android:background="@drawable/details_btn" />
+
         <ImageButton
             android:layout_width="@dimen/dp_24"
             android:layout_height="@dimen/dp_24"
@@ -43,9 +46,9 @@
 
         <ImageButton
             android:id="@+id/publish"
-            android:layout_alignParentRight="true"
             android:layout_width="@dimen/dp_60"
             android:layout_height="@dimen/dp_60"
+            android:layout_alignParentRight="true"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="@dimen/dp_20"
             android:background="@android:color/transparent"
