--- a/app/src/main/res/drawable/buy_shape.xml
+++ b/app/src/main/res/drawable/buy_shape.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle"
-    >
-    <corners android:radius="@dimen/dp_200"/>
-    <gradient android:startColor="#fad961" android:endColor="#f66b1c"/>
+    android:shape="rectangle">
+    <corners android:radius="@dimen/dp_200" />
+    <gradient
+        android:endColor="#f66b1c"
+        android:startColor="#fad961" />
 
 </shape>
