--- a/app/src/main/res/layout/popu_advance.xml
+++ b/app/src/main/res/layout/popu_advance.xml
@@ -2,13 +2,15 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="@dimen/dp_110"
-    android:background="@drawable/popu_shape">
+    android:background="#00ffffff"
+   >
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
+        android:background="@drawable/popu_shape"
+        android:layout_marginTop="@dimen/dp_110"
         android:paddingLeft="@dimen/dp_24"
         android:paddingTop="@dimen/dp_20"
         android:paddingRight="@dimen/dp_24">
@@ -28,14 +30,20 @@
             android:layout_marginTop="@dimen/dp_6"
             android:background="@drawable/details_btn" />
 
-        <ImageButton
-            android:layout_width="@dimen/dp_24"
-            android:layout_height="@dimen/dp_24"
+        <ImageView
+            android:id="@+id/comment_return"
+            android:layout_width="@dimen/dp_40"
+            android:layout_height="@dimen/dp_40"
             android:layout_alignParentRight="true"
             android:background="@android:color/transparent"
             android:src="@drawable/down" />
-
-        <ImageButton
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/comment_recycler"
+            android:layout_below="@id/adavance"
+            android:layout_marginTop="@dimen/dp_20"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+        <ImageView
             android:id="@+id/ad_return"
             android:layout_width="@dimen/dp_60"
             android:layout_height="@dimen/dp_60"
