--- a/app/src/main/res/layout/activity_my_rccord.xml
+++ b/app/src/main/res/layout/activity_my_rccord.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="#fff"
     android:layout_height="match_parent"
     tools:context="com.why.happy_movie.activity.MyRccordActivity">
     <LinearLayout
@@ -50,7 +51,9 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/pay_recycler"
-        android:layout_margin="@dimen/dp_10"
+        android:layout_marginTop="@dimen/dp_10"
+        android:layout_marginRight="@dimen/dp_24"
+        android:layout_marginLeft="@dimen/dp_24"
         android:layout_weight="1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
