--- a/app/src/main/res/layout/activity_my_news.xml
+++ b/app/src/main/res/layout/activity_my_news.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginLeft="@dimen/dp_24"
     android:layout_marginRight="@dimen/dp_24"
-    android:orientation="vertical"
     tools:context="com.why.happy_movie.activity.MyNewsActivity">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
 
+    android:orientation="vertical">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -54,7 +57,6 @@
             android:textSize="@dimen/sp_12" />
 
         <Button
-
             android:background="@drawable/my_news_shape"
             android:layout_width="@dimen/dp_20"
             android:layout_height="@dimen/dp_20"
@@ -153,7 +155,13 @@
             android:textSize="@dimen/sp_12" />
     </LinearLayout>
 
-
-
-
 </LinearLayout>
+<ImageView
+    android:layout_marginBottom="@dimen/dp_20"
+    android:layout_alignParentBottom="true"
+    android:layout_width="@dimen/dp_60"
+    android:layout_height="@dimen/dp_60"
+    android:background="@drawable/ic_xiangqing_back"
+    android:id="@+id/news_return"/>
+
+</RelativeLayout>
