--- a/app/src/main/res/layout/pay_result.xml
+++ b/app/src/main/res/layout/pay_result.xml
@@ -1,18 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:orientation="vertical"
 	>
-    
+
+	<ImageView
+        android:id="@+id/iv_success"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:src="@drawable/success"
+        android:visibility="gone"
+		android:layout_gravity="center_horizontal"
+		android:layout_marginTop="@dimen/dp_100"/>
+
+	<ImageView
+        android:id="@+id/iv_faile"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:src="@drawable/faile"
+        android:visibility="gone"
+		android:layout_gravity="center_horizontal"
+		android:layout_marginTop="@dimen/dp_100"/>
 	<TextView
 		android:id="@+id/pay_result"
-	    android:layout_width="fill_parent"
-	 	android:layout_height="fill_parent"
+	    android:layout_width="wrap_content"
+	 	android:layout_height="wrap_content"
 		android:gravity="center"
 	 	android:textColor="#ff000000"
-	 	android:textSize="20dp"
-		android:text="支付成功"/>
+	 	android:textSize="@dimen/sp_20"
+		android:layout_gravity="center_horizontal"
+		android:layout_marginTop="@dimen/dp_20"
+		android:text="支付成功" />
+
+
+	<LinearLayout
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_gravity="center"
+		android:layout_marginTop="@dimen/dp_30"
+		android:orientation="horizontal">
+
+		<Button
+			android:id="@+id/back"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:text="返回"
+		android:textColor="#fff"
+		android:textSize="@dimen/sp_18"
+		android:background="@drawable/details_btn"/>
+
+		<TextView
+			android:layout_width="@dimen/dp_30"
+			android:layout_height="wrap_content"
+			/>
+		<Button
+            android:id="@+id/chakan"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="查看订单"
+			android:textColor="#fff"
+			android:textSize="@dimen/sp_18"
+			android:background="@drawable/details_btn"/>
+	</LinearLayout>
 	
 </LinearLayout>
