--- a/app/src/main/res/layout/activity_my_news.xml
+++ b/app/src/main/res/layout/activity_my_news.xml
@@ -4,15 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="@dimen/dp_24"
-    android:layout_marginRight="@dimen/dp_24"
+    android:background="#fff"
+
     tools:context="com.why.happy_movie.activity.MyNewsActivity">
 <LinearLayout
+    android:layout_marginLeft="@dimen/dp_24"
+    android:layout_marginRight="@dimen/dp_24"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
     android:orientation="vertical">
     <TextView
+        android:id="@+id/shu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_15"
@@ -20,147 +22,20 @@
         android:textColor="#333333"
         android:textSize="@dimen/sp_14" />
 
-    <LinearLayout
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/list7"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_20"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="购票信息"
-            android:textColor="#333333"
-            android:textSize="@dimen/sp_16" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="13:01"
-            android:textColor="#333333"
-            android:textSize="@dimen/sp_12" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_10"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="您已成功订购两张电影票!"
-            android:textColor="#333333"
-            android:textSize="@dimen/sp_12" />
-
-        <Button
-            android:background="@drawable/my_news_shape"
-            android:layout_width="@dimen/dp_20"
-            android:layout_height="@dimen/dp_20"
-            android:text="1"
-            android:textColor="#fff"
-            android:textSize="@dimen/sp_12" />
-    </LinearLayout>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_20"
-        android:text="电影信息"
-        android:textColor="#333333"
-        android:textSize="@dimen/sp_16" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_10"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="有两部新电影即将上映"
-            android:textColor="#333333"
-            android:textSize="@dimen/sp_12" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="13:01"
-            android:textColor="#333333"
-            android:textSize="@dimen/sp_12" />
-    </LinearLayout>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_20"
-        android:text="提醒信息"
-        android:textColor="#333333"
-        android:textSize="@dimen/sp_16" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_10"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="您购买的电影将于2小时后放映，请提前到达。"
-            android:textColor="#333333"
-            android:textSize="@dimen/sp_12" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="10-11 14:20"
-            android:textColor="#333333"
-            android:textSize="@dimen/sp_12" />
-    </LinearLayout>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_20"
-        android:text="购票信息"
-        android:textColor="#333333"
-        android:textSize="@dimen/sp_16" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_10"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="您已成功订购两张电影票!"
-            android:textColor="#333333"
-            android:textSize="@dimen/sp_12" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="10-11 14:01"
-            android:textColor="#333333"
-            android:textSize="@dimen/sp_12" />
-    </LinearLayout>
 
 </LinearLayout>
 <ImageView
-    android:layout_marginBottom="@dimen/dp_20"
+    android:layout_marginBottom="@dimen/dp_24"
     android:layout_alignParentBottom="true"
     android:layout_width="@dimen/dp_60"
     android:layout_height="@dimen/dp_60"
+    android:layout_marginLeft="@dimen/dp_24"
     android:background="@drawable/ic_xiangqing_back"
     android:id="@+id/news_return"/>
 
