--- a/app/src/main/res/layout/popu_advance.xml
+++ b/app/src/main/res/layout/popu_advance.xml
@@ -52,7 +52,7 @@
             android:background="@android:color/transparent"
             android:src="@drawable/ic_xiangqing_back" />
 
-        <ImageButton
+        <ImageView
             android:id="@+id/publish"
             android:layout_width="@dimen/dp_60"
             android:layout_height="@dimen/dp_60"
