--- a/app/src/main/res/layout/comment_item.xml
+++ b/app/src/main/res/layout/comment_item.xml
@@ -80,6 +80,7 @@
             android:src="@drawable/discuss" />
 
         <TextView
+            android:id="@+id/replyNum"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/dp_5"
