--- a/app/src/main/res/layout/activity_jump.xml
+++ b/app/src/main/res/layout/activity_jump.xml
@@ -28,29 +28,29 @@
 
         <RadioButton
             android:id="@+id/my_btn1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/dp_15"
+            android:layout_height="@dimen/dp_15"
             android:button="@null"
             android:layout_margin="@dimen/dp_5"
             android:background="@drawable/jump_sel"/>
         <RadioButton
             android:id="@+id/my_btn2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/dp_15"
+            android:layout_height="@dimen/dp_15"
             android:button="@null"
             android:layout_margin="@dimen/dp_5"
             android:background="@drawable/jump_sel"/>
         <RadioButton
             android:id="@+id/my_btn3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/dp_15"
+            android:layout_height="@dimen/dp_15"
             android:button="@null"
             android:layout_margin="@dimen/dp_5"
             android:background="@drawable/jump_sel"/>
         <RadioButton
             android:id="@+id/my_btn4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/dp_15"
+            android:layout_height="@dimen/dp_15"
             android:button="@null"
             android:layout_margin="@dimen/dp_5"
             android:background="@drawable/jump_sel"/>
