--- a/app/src/main/res/layout/dianying_item.xml
+++ b/app/src/main/res/layout/dianying_item.xml
@@ -20,7 +20,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_36"
-            android:background="#66000000"
+            android:background="@drawable/home_shape"
             android:layout_alignParentBottom="true"
             android:orientation="horizontal">
             <TextView
