--- a/app/src/main/res/layout/home_one.xml
+++ b/app/src/main/res/layout/home_one.xml
@@ -65,6 +65,7 @@
                     android:background="@null"
                     android:textSize="@dimen/sp_10"
                     android:hint="输入要搜索的影片"
+                    android:textColorHint="#f2f2f2"
                     android:layout_gravity="center_vertical"
                     android:layout_height="wrap_content" />
                 <TextView
