--- a/app/src/main/res/layout/activity_three_list.xml
+++ b/app/src/main/res/layout/activity_three_list.xml
@@ -5,15 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#fff"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
     tools:context="com.why.happy_movie.activity.ThreeListActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-
-
-
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -60,6 +59,7 @@
                 android:layout_width="@dimen/dp_150"
                 android:background="@null"
                 android:textSize="@dimen/sp_10"
+                android:textColorHint="#f2f2f2"
                 android:hint="输入要搜索的影片"
                 android:layout_gravity="center_vertical"
                 android:layout_height="wrap_content" />
