--- a/app/src/main/res/layout/idea_activity.xml
+++ b/app/src/main/res/layout/idea_activity.xml
@@ -61,6 +61,7 @@
             android:textSize="@dimen/sp_12"
             android:background="@android:color/transparent"
             android:textColorHint="#999999"
+            android:gravity="top"
             android:hint="写下您对产品的感受吧！工作人员将会在第一时间评估处理。"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
