--- a/app/src/main/res/layout/my_reset_pwd.xml
+++ b/app/src/main/res/layout/my_reset_pwd.xml
@@ -87,7 +87,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="@dimen/dp_10"
-            android:paddingBottom="@dimen/dp_10">
+            >
 
             <TextView
                 android:layout_width="wrap_content"
@@ -120,7 +120,7 @@
         android:text="确认修改"
         android:textColor="#fff"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/dp_24"
         android:layout_below="@id/lall"
         android:layout_alignParentRight="true"
         android:layout_marginTop="@dimen/dp_20"
